0.4 (10/6/2008)

  Features

    Speed up keyword index 'or' (union) queries by using a single
    IFBTree.multiunion instead of multiple calls to IFBTree.union;
    this is most helpful for speeding up 'or' queries where there are
    lots of terms in the query sequence.

  Documentation

    Add ``overview`` page.

0.3 (10/4/2008)

  Features

    Add ``repoze.catalog.document.DocumentMap`` class, which provides
    a mechanism to map "addresses" (paths) to document ids.

  Documentation

    Add API documentation for catalog and document map.

  Backwards incompatibilities

    Rename ``searchResults`` method to ``search``.

    Removed ``updateIndex`` and ``updateIndexes`` methods of catalog.

    All index implementations moved into ``repoze.catalog.indexes``.

    All interfaces moved to ``repoze.catalog.interfaces``.

0.2

  Provide ``sort_index`` capability.

0.1

  Initial release.
