@@ -1,3 +1,10 @@
+Next release
+
+  Features
+
+    Speed up keyword index 'and' (intersection) queries nominally by
+    sorting intersected sets from smallest-to-largest first.
+
 0.4 (10/6/2008)
 
   Features
